syntax = "proto3";

package contrib.api.security.authz.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "security/authz/casbin/v1/config.proto";

option go_package = "github.com/origadmin/contrib/api/gen/go/security/authz/v1;authzv1";

// RuleSpec is the data transfer object for an authorization rule specification.
// It encapsulates the core components of a rule to be checked against a policy engine.
// NOTE: subject is NOT included here as it is provided by Principal during authorization checks.
//
// Deprecated: Use RuleSpec instead.
message RuleSpec {
  // The domain or tenant for this rule check. Can be empty for non-multi-tenant models.
  // e.g., "project-a", "tenant-blue-ocean"
  string domain = 1;

  // The resource being accessed.
  // e.g., "/api/v1/documents/123", "urn:document:456"
  string resource = 2;

  // The action being performed on the resource.
  // e.g., "read", "write", "edit", "POST"
  string action = 3;

  // Attributes contains additional, dynamic properties related to this rule check,
  // enabling Attribute-Based Access Control (ABAC).
  // This can include properties of resource (e.g., {"owner": "user-xyz", "status": "draft"})
  // or context (e.g., {"ip_address": "192.168.1.100"}).
  google.protobuf.Struct attributes = 4;
}

// PolicySpec is the data transfer object for a complete policy specification.
// Unlike RuleSpec (used for authorization checks without subject),
// PolicySpec includes subject and is used for storage and retrieval.
message PolicySpec {
  // Policy type identifier.
  // For Casbin: "p" (policy/permission), "g" (grouping/role), "g2", "g3", etc.
  // For OPA: "opa:rego"
  // For IAM: "iam:statement"
  // For Zanzibar: "zanzibar:relation"
  string type = 1;

  // The subject of this policy (who the policy applies to).
  // e.g., "user:123", "role:admin", "service:payment-service"
  // NOTE: During authorization checks, this field is ignored and replaced with Principal's identity.
  string subject = 2;

  // Actions that this policy grants or restricts.
  // Used for type="p" (permission) policies.
  // Multiple actions can be specified (e.g., ["read", "write"] for IAM-style policies).
  repeated string actions = 3;

  // Resources that this policy applies to.
  // Used for type="p" (permission) policies.
  // Multiple resources can be specified (e.g., ["s3:*", "s3:bucket/*"] for IAM-style policies).
  repeated string resources = 4;

  // Roles that the subject is assigned to.
  // Used for type="g" (grouping/role) policies in RBAC.
  // Multiple roles can be specified (e.g., ["admin", "editor", "viewer"]).
  repeated string roles = 5;

  // Effect of the policy (e.g., "allow", "deny").
  // Recommended values: "allow", "deny"
  optional string effect = 6;

  // Domain or namespace for this policy.
  // Used for multi-tenant isolation (Casbin) or resource namespacing (Zanzibar).
  optional string domain = 7;

  // Condition expression for the policy.
  // Supports multiple formats:
  // - Casbin: simple conditions (e.g., "r.sub == p.sub")
  // - OPA: Rego code (e.g., "allow { input.user == data.roles.admin }")
  // - IAM: JSON conditions (e.g., {"StringEquals": {"aws:UserAgent": "MyApp"}})
  optional string condition = 8;

  // Valid from timestamp (Unix epoch in seconds).
  optional int64 valid_from = 20;

  // Expires at timestamp (Unix epoch in seconds).
  optional int64 expires_at = 21;

  // Priority of the policy.
  // Default is 0 (lowest priority). Higher numbers have higher priority.
  optional int32 priority = 22;

  // Whether the policy is disabled.
  // Default is false (policy is enabled).
  optional bool disabled = 23;

  // Metadata for framework-specific extensions.
  // This field allows arbitrary key-value pairs for framework-specific data.
  // Examples:
  // - OPA: {"rego_package": "auth", "rego_entrypoint": "allow", "data": {...}}
  // - Zanzibar: {"namespace": "document", "object_id": "123", "relation": "viewer"}
  // - Custom: any additional fields needed by specific implementations
  google.protobuf.Struct metadata = 30;
}

// Authorizer defines the configuration for a single authorization mechanism.
message Authorizer {
  // Unique name for this authorization configuration instance.
  string name = 1 [
    json_name = "name",
    (gnostic.openapi.v3.property) = {description: "Unique name for this authorizer instance."}
  ];

  // The type of authorization mechanism.
  // This string MUST match one of the keys of the configuration fields below
  // (e.g., "casbin") or a registered custom authorization mechanism.
  // It acts as a discriminator.
  string type = 2 [
    json_name = "type",
    (gnostic.openapi.v3.property) = {description: "The type of authorization mechanism, e.g., 'casbin', 'opa'."}
  ];

  // --- Built-in Authorizer Configurations ---

  // Configuration for a Casbin authorizer.
  // Must be present if 'type' is "casbin".
  optional contrib.api.security.authz.casbin.v1.Config casbin = 10 [
    json_name = "casbin",
    (gnostic.openapi.v3.property) = {description: "Configuration for a Casbin authorizer."}
  ];

  // --- Custom Authorizer Configuration ---

  // For custom types, the 'type' field will contain the custom name,
  // and this 'customize' field will hold its configuration.
  optional google.protobuf.Struct settings = 100 [
    json_name = "settings",
    (gnostic.openapi.v3.property) = {description: "Configuration for a custom authorizer."}
  ];
}
